# seven-wonders-duel-api

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: add_game.py  add_military_win.py  add_score.py  games.py  get_games.py  get_scores.py  get_wins.py  military_supremacies.py  players.py  scientific_supremacies.py  scores.py  supremacies.py  util.py  wins.py
app/models/: game.py  military_supremacy.py  player.py  scientific_supremacy.py  score.py  supremacy.py
tests/: conftest.py  test_add_game.py  test_add_military_win.py  test_add_score.py  test_game.py  test_get_military_wins.py  test_get_players.py  test_get_scores.py  test_get_wins.py  test_score.py
tests/api/: test_games.py  test_military_supremacies.py  test_players.py  test_scientific_supremacies.py  test_scores.py  test_supremacies.py  test_wins.py
tests/data/: scores.csv
