[tool.poetry]
name = "seven-wonders-duel-api"
version = "0.1.0"
description = ""
authors = ["Andrew Hynes <andrewjhynes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.18.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
requests = "^2.28.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
