[project]
name = "seven-wonders-duel-api"
version = "0.1.0"
description = ""
authors = [ {name = "Andrew Hynes", email = "andrewjhynes@gmail.com"}, ]

requires-python = ">= 3.11"

dependencies = [
  "fastapi",
  "psycopg2-binary",
  "sqlmodel==0.0.8",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pandas",
  "pre-commit",
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "pandas>=2.2.3",
    "pytest>=8.3.3",
]
